--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,12 @@
       "ext-mbstring": "*",
       "graphaware/neo4j-common": "^3.4",
       "graphaware/neo4j-bolt": "^1.5",
-      "symfony/event-dispatcher": "^2.7 || ^3.0 || ^4.0|^5.0",
+      "symfony/event-dispatcher": "^4.0",
       "myclabs/php-enum": "^1.4",
       "php-http/httplug": "^2.0",
       "php-http/message-factory": "^1.0",
       "php-http/client-common": "^2.3.0",
       "php-http/discovery": "^1.0",
-
       "php-http/message": "^1.0",
       "php-http/guzzle6-adapter": "^2.0"
     },
