--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
       "ext-bcmath": "*",
       "ext-mbstring": "*",
       "graphaware/neo4j-common": "^3.4",
-      "luxplus/neo4j-bolt": "^1.5",
-      "symfony/event-dispatcher": "^4.0|^5.0",
+      "luxplus/neo4j-bolt": "dev-master",
+      "symfony/event-dispatcher": "5.1.5",
       "myclabs/php-enum": "^1.4",
       "php-http/httplug": "^2.0",
       "php-http/message-factory": "^1.0",
