--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
       "ext-mbstring": "*",
       "graphaware/neo4j-common": "^3.4",
       "luxplus/neo4j-bolt": "dev-master",
-      "symfony/event-dispatcher": "^5.1",
+      "symfony/event-dispatcher": "^5.1.5 || ^5.1.6",
       "myclabs/php-enum": "^1.4",
       "php-http/httplug": "^2.0",
       "php-http/message-factory": "^1.0",
