--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,20 @@
         }
     ],
     "require": {
-      "php": "^5.6 || ^7.0",
-      "ext-bcmath": "*",
-      "ext-mbstring": "*",
-      "graphaware/neo4j-common": "^3.4",
-      "luxplus/neo4j-bolt": "dev-master",
-      "symfony/event-dispatcher": "5.1.6",
-      "myclabs/php-enum": "^1.4",
-      "php-http/httplug": "^2.0",
-      "php-http/message-factory": "^1.0",
-      "php-http/client-common": "^2.3.0",
-      "php-http/discovery": "^1.0",
-      "php-http/message": "^1.0",
-      "php-http/guzzle6-adapter": "^2.0"
+        "php": "^5.6 || ^7.0",
+        "ext-bcmath": "*",
+        "ext-mbstring": "*",
+        "graphaware/neo4j-common": "^3.4",
+        "graphaware/neo4j-bolt": "^1.5",
+        "symfony/event-dispatcher": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "myclabs/php-enum": "^1.4",
+        "php-http/httplug": "^1.0",
+        "php-http/message-factory": "^1.0",
+        "php-http/client-common": "^1.0",
+        "php-http/discovery": "^1.0",
+
+        "php-http/message": "^1.0",
+        "php-http/guzzle6-adapter": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
